chore: fix alignment

--- a/feed/style.css
+++ b/feed/style.css
@@ -271,6 +271,10 @@ body {
   border-radius: 50%;
 }
 
+.error-message {
+  text-align: center;
+}
+
 @media (max-width: 480px) {
   .filters,
   .filter-row {
